feat(tasks): let a model write its conclusions into a task and find them later
The database already had the two places for this — tasks.summary ("Decision/
Summary") and tasks.discussion (a JSON array of DiscussionBlock) — and
H2TaskRepository even had updateSummary, updateDiscussion and a native
findByDiscussionContent. None of it was reachable: no REST endpoint, and the
only callers were tests. /api/find searched the title and nothing else.

Writing:
- GET/PUT /api/tasks/{taskId}/summary stores and returns the conclusion for a
  task. The field is required on PUT so a malformed body cannot silently wipe an
  existing conclusion; an empty string clears it deliberately.
- GET/POST /api/tasks/{taskId}/discussion reads the block tree and appends to it.
  author is a free-form string rather than a userId, so an agent signs its own
  name ("claude") under whichever token it runs with; it defaults to the caller's
  username. type defaults to MESSAGE, DECISION being the interesting one here.
  The nesting level is computed server-side as parent + 1, an unknown parentId is
  400, and a client-supplied block UUID is preserved but cannot be reused (409).

Reading:
- FindTasksRequest gains contentSearch: one case-insensitive substring match over
  title, description, summary and discussion at once. Because the discussion
  match runs over the stored JSON, it also finds blocks by author or by type.
- TaskResponse now carries summary, so a search result already contains the
  conclusion without a second call.

Plumbing:
- TaskSearchCriteria + TaskRepository.search moved the query out of FindResource
  and into H2TaskRepository, where it is native SQL: discussion is mapped through
  an AttributeConverter, and JPQL LIKE cannot touch it — the parameter would be
  pushed through the same converter.
- updateSummary and updateDiscussion are now part of the TaskRepository SPI
  instead of dangling on the H2 implementation.
- TaskAccessGuard holds the check shared by both new resources