@@ -4,25 +4,26 @@ import com.taskmind.api.dto.FindTasksRequest;
 import com.taskmind.api.dto.TaskResponse;
 import com.taskmind.application.service.AuthService;
 import com.taskmind.application.service.ProjectAccessService;
-import com.taskmind.infrastructure.db.TaskEntity;
+import com.taskmind.application.service.TaskService;
+import com.taskmind.domain.spi.TaskSearchCriteria;
 import jakarta.annotation.security.RolesAllowed;
 import jakarta.inject.Inject;
 import jakarta.ws.rs.*;
 import jakarta.ws.rs.core.Context;
 import jakarta.ws.rs.core.MediaType;
 import jakarta.ws.rs.core.SecurityContext;
-import java.util.ArrayList;
-import java.util.HashMap;
+import java.util.Collection;
 import java.util.List;
-import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 /**
  * Task search restricted to the projects the caller can actually see:
  * projects they own plus projects they are a member of. A search without a
  * {@code projectId} spans exactly that set; a search with a {@code projectId}
  * outside that set yields an empty result instead of leaking foreign tasks.
+ *
+ * <p>{@code contentSearch} ищет по всему тексту задачи, включая summary и
+ * обсуждение — через него модель находит свои прежние выводы.
  */
 @Path("/api/find")
 @Produces(MediaType.APPLICATION_JSON)
@@ -32,6 +33,7 @@ public class FindResource {
 
     @Inject AuthService authService;
     @Inject ProjectAccessService projectAccessService;
+    @Inject TaskService taskService;
 
     @POST
     public ResponseWrapper find(FindTasksRequest req, @Context SecurityContext sec) {
@@ -42,41 +44,28 @@ public class FindResource {
             return new ResponseWrapper(List.of());
         }
 
-        List<Integer> scope;
+        Collection<Integer> scope;
         if (req.projectId != null) {
             if (!accessibleProjectIds.contains(req.projectId)) {
                 return new ResponseWrapper(List.of());
             }
             scope = List.of(req.projectId);
         } else {
-            scope = new ArrayList<>(accessibleProjectIds);
+            scope = accessibleProjectIds;
         }
 
-        StringBuilder query = new StringBuilder("projectId IN :projectIds");
-        Map<String, Object> params = new HashMap<>();
-        params.put("projectIds", scope);
+        var criteria = new TaskSearchCriteria(
+            scope,
+            req.titleSearch,
+            req.contentSearch,
+            req.assignedUserId,
+            req.statusId,
+            req.isArchived
+        );
 
-        if (req.titleSearch != null && !req.titleSearch.isBlank()) {
-            query.append(" AND title LIKE :title");
-            params.put("title", "%" + req.titleSearch + "%");
-        }
-        if (req.assignedUserId != null) {
-            query.append(" AND assignedUserId = :assignedUserId");
-            params.put("assignedUserId", req.assignedUserId);
-        }
-        if (req.statusId != null) {
-            query.append(" AND statusId = :statusId");
-            params.put("statusId", req.statusId);
-        }
-        if (req.isArchived != null) {
-            query.append(" AND isArchived = :isArchived");
-            params.put("isArchived", req.isArchived);
-        }
-
-        List<TaskResponse> responses = TaskEntity.<TaskEntity>list(query.toString(), params).stream()
-            .map(TaskEntity::toDomainModel)
+        List<TaskResponse> responses = taskService.search(criteria).stream()
             .map(TaskResponse::from)
-            .collect(Collectors.toList());
+            .toList();
 
         return new ResponseWrapper(responses);
     }
